# rustu16calculator

./: LICENSE  README.MD  config.json  config_example.json
client/: Cargo.toml
client/src/: api.rs  cli.rs  client_error.rs  expression.rs  expression_handler.rs  main.rs
server/: Cargo.toml
server/src/: calculator.rs  cli.rs  main.rs  server.rs  server_error.rs
server/src/tests/: test_calc.rs
