[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.27.0", features = ["full"] }
regex = "1.7.3"
reqwest = "0.11.16"
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.2.1", features = ["derive"] }